2008-05-24  George Giolfan  <georgegiolfan@yahoo.com>

	* ComboBox.cs, Theme.cs, ThemeWin32Classic.cs: Added support for the hot drop
	down button style.

2008-05-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: Minor correction to previous patch: PageDown should
	also *try* to move by one item if the computed offset is negative,
	just like the PageUp case.

2008-05-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: When navigating using PageDown/PageUp the navigation
	should be done for at least 1 item, and not stay at the same item.
	Fixes part of #374713.

2008-05-23  Jonathan Pobst  <monkey@jpobst.com>

	* FileDialog.cs: Add a FSEntryComparer, and use it to sort the
	directories.  [Fixes bug #393931]

2008-05-22  Andreia Gaita <avidigal@novell.com> 

	* WebBrowser.cs: Implement DocumentText. Implement AllowNavigation.
	  Don't fire events until the initial about:blank page has finished
	  loading. Clean up events.

2008-05-22  Atsushi Enomoto  <atsushi@ximian.com>

	* XplatUIX11.cs : when we call WM_SETFOCUS, call X11Keyboard
	  FocusIn() too. This should fix the issue on switching
	  scim keyboards.

2008-05-22  Atsushi Enomoto  <atsushi@ximian.com>

	* X11Keyboard.cs : set XIM font size to somewhat reasonable
	  number (ideally the input textbox size, but that could be
	  too messy).

2008-05-22  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripTextBox.cs: List for the TextBox's TextChanged and fire
	the ToolStripItem's TextChanged.  [Fixes bug #393597]

2008-05-21  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TabControl.cs: When invalidating in SelectedIndex and we need to
	inflate to take into account the border of the tabs, make sure that
	the invalidated rect doesn't overflow the control bounds, since that
	would avoid updating at all.

2008-05-21  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TabControl.cs: Don't substract scroller width from the row width,